@@ -10,7 +10,7 @@ Downloads and snapshots are available from:
 Change Log
 ~~~~~~~~~~
 
-NASM-X v1.4: 05 Mar 2014
+NASMX v1.4: 12 Mar 2014
 
 - Fixed INVOKE stack alignment bug
 - Fixed INVOKE bug when eax/rax used as argument
@@ -18,7 +18,8 @@ NASM-X v1.4: 05 Mar 2014
 - Corrected x64 register parameter spill behavior
 - Added pragmas PROC_FASTCALL_STACK_PRELOAD and INVOKE_FASTCALL_STACK_PRELOAD
 - Deprecated previous FASTCALL_STACK_PRELOAD pragma
-- Updated Windows distribution "bin" directory with NASM v2.11.02
+- Nasm v2.11 or greater now required due to preprocessor fixes
+- Updated Windows distribution "bin" directory with Nasm v2.11.02
 - Updated html docs and Windows Compiled Help Modules
 _________________________________________________________
 
